--- a/modules/oxide/src/less/theme/components/toolbar-button/toolbar-select-button.less
+++ b/modules/oxide/src/less/theme/components/toolbar-button/toolbar-select-button.less
@@ -7,7 +7,6 @@
 @toolbar-button-bespoke-background-color: contrast(@background-color, darken(@background-color, 3%), lighten(@background-color, 7%));
 @toolbar-button-bespoke-label-max-width: 7em;
 @toolbar-button-bespoke-spacing-x: 4px;
-@toolbar-button-select-padding: 4px;
 
 @toolbar-button-select-active-background-color: @toolbar-button-active-background-color;
 @toolbar-button-select-active-chevron-color: @toolbar-button-active-icon-color;
